unpackaged/objects/copado__Compliance_Scan_Result__c.object
<CustomObject>
	<description>This object stores the results of a compliance scan</description>
	<fields>
		<fullName>copado__Deployment_Step__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Deployment Step</label>
		<referenceTo>copado__Step__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Findings__c</fullName>
		<label># Findings</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Git_Snapshot__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Git Snapshot</label>
		<referenceTo>copado__Git_Backup__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Highest_Rule_Action__c</fullName>
		<description>The most severe action in the Compliance Findings.</description>
		<inlineHelpText>The most severe action in the Compliance Findings.</inlineHelpText>
		<label>Highest Rule Action</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Compliance_Action</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Highest_Severity__c</fullName>
		<description>Highest Severity of the Compliance Findings.</description>
		<inlineHelpText>Highest Severity of the Compliance Findings.</inlineHelpText>
		<label>Highest Severity</label>
		<type>Picklist</type>
		<valueSet>
			<restricted>true</restricted>
			<valueSetName>copado__Compliance_Severity</valueSetName>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Resolution_Details__c</fullName>
		<label>Resolution Details</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>copado__Scan_Duration_in_Minutes__c</fullName>
		<formula>(copado__Scan_End__c - copado__Scan_Start__c) * 1440</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Scan Duration in Minutes</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Scan_End__c</fullName>
		<label>Scan End</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Scan_Start__c</fullName>
		<label>Scan Start</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>In Progress</fullName>
					<default>true</default>
					<label>In Progress</label>
				</value>
				<value>
					<fullName>Completed - No Findings</fullName>
				</value>
				<value>
					<fullName>Completed - Findings detected</fullName>
				</value>
				<value>
					<fullName>Completed - Resolved</fullName>
				</value>
				<value>
					<fullName>Under Investigation</fullName>
				</value>
				<value>
					<fullName>Error</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>Compliance Scan Results</relationshipLabel>
		<relationshipName>Compliance_Scan_Results</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>Compliance Scan Result</label>
	<listViews>
		<fullName>copado__All</fullName>
		<columns>NAME</columns>
		<columns>copado__Status__c</columns>
		<columns>copado__Findings__c</columns>
		<columns>copado__Environment__c</columns>
		<columns>copado__Highest_Severity__c</columns>
		<columns>copado__Highest_Rule_Action__c</columns>
		<columns>copado__Scan_Duration_in_Minutes__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
		<language>en_US</language>
	</listViews>
	<nameField>
		<displayFormat>Scan Result - {000000000}</displayFormat>
		<label>Scan Result Reference</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Compliance Scan Results</pluralLabel>
	<recordTypes>
		<fullName>copado__Copado</fullName>
		<active>true</active>
		<description>This record type is used for scan results produced by Copado.</description>
		<label>Copado</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__Other</fullName>
		<active>true</active>
		<description>Use this record type to capture non-Salesforce scan results.</description>
		<label>Other</label>
	</recordTypes>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>